Adicionando padrao autopep8 e sort de imports ao projeto e config com pydantic

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,11 @@
-#db credentials
-DB_HOST="172.19.0.2"
-DB_PORT="5432"
-DB_PASSWORD="postgres"
-DB_DATABASE="postgres"
+#db credentials test
+DB_HOST_TEST="172.19.0.2"
+DB_PORT_TEST="5432"
+DB_PASSWORD_TEST="postgres"
+DB_DATABASE_TEST="postgres"
+
+#db credentials prod
+DB_HOST_PROD="172.19.0.2"
+DB_PORT_PROD="5432"
+DB_PASSWORD_PROD="postgres"
+DB_DATABASE_PROD="postgres"
