--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3.9"
 services:
-  postgres:
-    container_name: postgres_db 
-    image: postgres
-    restart: always
-    environment:
-        - POSTGRES_USER=postgres
-        - POSTGRES_PASSWORD=postgres
-        - POSTGRES_DB=postgres
-    ports:
-      - 5432:5432
+    postgres:
+        container_name: postgres_db
+        image: postgres
+        restart: always
+        env_file: .env
+        environment:
+            - POSTGRES_USER = postgres
+            - POSTGRES_PASSWORD = postgres
+            - POSTGRES_DB = postgres
+        ports:
+            - ${DB_PORT}: 5432
