Adicionando mongo e pydantic config para settings

--- a/src/.env
+++ b/src/.env
@@ -9,3 +9,8 @@ DB_HOST_PROD="172.19.0.2"
 DB_PORT_PROD="5432"
 DB_PASSWORD_PROD="postgres"
 DB_DATABASE_PROD="postgres"
+
+DB_HOST_DEV="mongo"
+DB_PASSWORD_DEV="example"
+DB_PORT_DEV="27017"
+DB_DATABASE_DEV="teste"
