--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,31 @@
 version: "3.9"
 services:
-    postgres:
-        container_name: postgres_db
-        image: postgres
+    # postgres:
+    #     container_name: postgres_db
+    #     image: postgres
+    #     restart: always
+    #     environment:
+    #         - POSTGRES_USER = postgres
+    #         - POSTGRES_PASSWORD = postgres
+    #         - POSTGRES_DB = postgres
+    #     ports:
+    #         - 5432:5432
+    mongo:
+        image: mongo
         restart: always
-        env_file: .env
+        
         environment:
-            - POSTGRES_USER = postgres
-            - POSTGRES_PASSWORD = postgres
-            - POSTGRES_DB = postgres
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: example
         ports:
-            - ${DB_PORT}: 5432
+        - 27017:27017
+
+    mongo-express:
+        image: mongo-express
+        restart: always
+        ports:
+        - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_ADMINUSERNAME: root
+            ME_CONFIG_MONGODB_ADMINPASSWORD: example
+            ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
